#24: Рефакторинг кода